# wincent

./: .ackrc  .bash_profile  .dprint.jsonc  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmodules  .gvimrc  .hgrc  .inputrc  .luarc.json  .mailmap  .osx  .prettierignore  .prettierrc  .slate  .slate.js  .styluaignore  .svn-authors  .tmux  .tmux.conf  .vimrc  .wage.config  .yamllint  .yamllint.yml  .yarnrc.yml  .zshrc  Brewfile  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  LICENSE.md  LICENSE.txt  Makefile  PROTOCOL.md  Pull Request.md  README  (+53 more)
.claude/: CLAUDE.md
.git-cipher/: secrets.json.asc
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.shells/: aliases  colors  exports  functions  path  vars
.vim/: .VimballRecord  .gitignore  versions  vimrc
.yarn/: .gitignore
LICENSES/: LuaSnip-LICENSE  base16-nvim-LICENSE.md  chmod.yazi-LICENSE  cmp-buffer-LICENSE  cmp-nvim-lsp-LICENSE  cmp-nvim-lua-LICENSE  cmp-path-LICENSE  cmp_luasnip-LICENSE  command-t-LICENSE.md  corpus-LICENSE.md  diff.yazi-LICENSE  diffview.nvim-LICENSE  ferret-LICENSE.txt  full-border.yazi-LICENSE  git-cipher-LICENSE.md  git.yazi-LICENSE  indent-blankline.nvim-LICENSE.md  jump-to-char.yazi-LICENSE  loupe-LICENSE.txt  lsar.yazi-LICENSE  mactag.yazi-LICENSE  mime-ext.yazi-LICENSE  mini.ai-LICENSE  mini.extra-LICENSE  mini.icons-LICENSE  mini.surround-LICENSE  mount.yazi-LICENSE  n-LICENSE  neco-ghc-LICENSE.md  no-status.yazi-LICENSE  nvim-clipper-LICENSE.md  nvim-cmp-LICENSE  nvim-lspconfig-LICENSE.md  nvim-tree.lua-LICENSE  (+57 more)
(+11800 files in other folders)
