[package]
name = "shellbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json","stream"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
futures = "0.3.28"
eventsource-client = "0.11.0"
regex = "1.8.1"
bytes = "1.4.0"
log = "0.4.21"
log4rs = "1.3.0"
